chore: Реализация LegalEntity CRUD и структуры проекта
