# internal/legalentities/orm.go
@@ -1,28 +1,13 @@
 package legalentities
 
 import (
-	"example.com/local/Go2part/domain"
-
-	"gorm.io/gorm"
+	"time"
 )
 
 type LegalEntity struct {
-	gorm.Model
-	UUID    string `gorm:"type:uuid;uniqueIndex"`
-	Name    string
-	INN     string
-	KPP     string
-	OGRN    string
-	Address string
-}
-
-func (e *LegalEntity) ToDomain() domain.LegalEntity {
-	return domain.LegalEntity{
-		UUID:    e.UUID,
-		Name:    e.Name,
-		INN:     e.INN,
-		KPP:     e.KPP,
-		OGRN:    e.OGRN,
-		Address: e.Address,
-	}
+	UUID      string     `gorm:"type:uuid;primaryKey;default:gen_random_uuid()" json:"uuid"`
+	Name      string     `gorm:"type:varchar(255);not null" json:"name"`
+	CreatedAt time.Time  `gorm:"autoCreateTime" json:"created_at"`
+	UpdatedAt time.Time  `gorm:"autoUpdateTime" json:"updated_at"`
+	DeletedAt *time.Time `gorm:"index" json:"-"`
 }
